hello-kubernetes/k8s_05_configmap_secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-config-pod
spec:
  containers:
    - name: app
      image: alpine
      command: ["sh", "-c", "echo $GREETING; echo $API_TOKEN; sleep 3600"]
